tests/testcases/valid/07_inc_dec_unary.ciel
int main() {
    int n = 5;
    int a = n++;
    int b = ++n;
    int c = n--;
    int d = --n;
    int e = -n;
    int f = +n;
    return 0;
}
