tests/testcases/invalid/semantic/86_increment_comparison_result.ciel
// Error: increment comparison result
int main() {
    int a = 5;
    int b = 10;

    // Error: (a < b) returns bool rvalue, cannot increment
    (a < b)++;

    return 0;
}
